# jiandu

./: .gitignore  BUILD-MAC.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: index.html
