[package]
name = "pdf-annotate-desktop"
version = "0.1.0"
description = "批注台 · AI 精读 桌面版"
edition = "2021"
rust-version = "1.77.2"

# Tauri v2: lib crate holds run() logic; main.rs is a thin shim.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
